Removed navbar to show single page application and styled description to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,13 @@ input::placeholder {
     text-align: center;
     font-size: 3rem;
     color: #1a2639;
+    margin-bottom: 0;
 }
 
 #description {
     text-align:center;
     width: 100%;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
 }
 
 #navbar {
